--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -21,6 +21,9 @@ class: center, middle, inverse, title-slide
 
 # Announcements
 
+--
+###What's with this `+` sign in the console?
+
 ---
 # "Flow Control"
 
@@ -69,25 +72,16 @@ Here's the general idea:
 # Making a sequence
 
 --
-### (Side note: we're creating vectors here...that's next week!)
+### (Side note: these are vectors...that's next week - read ahead!)
 
 --
 ### Two ways to make a sequence:
 
 --
-### 1. Use the `:` operator
-### 2. Use the `seq()` function
+### 1. Use the `seq()` function
+### 2. Use the `:` operator 
+
 &lt;br&gt;
-
---
-
-```r
-1:10
-```
-
-```
-##  [1]  1  2  3  4  5  6  7  8  9 10
-```
 
 --
 
@@ -109,6 +103,62 @@ seq(1, 10, 2)
 ## [1] 1 3 5 7 9
 ```
 
+--
+
+```r
+1:10
+```
+
+```
+##  [1]  1  2  3  4  5  6  7  8  9 10
+```
+---
+# Sequences don't have to be integers 
+
+--
+
+```r
+1.5:5.5
+```
+
+```
+## [1] 1.5 2.5 3.5 4.5 5.5
+```
+
+--
+
+```r
+seq(1.2, 6, 0.4)
+```
+
+```
+##  [1] 1.2 1.6 2.0 2.4 2.8 3.2 3.6 4.0 4.4 4.8 5.2 5.6 6.0
+```
+
+--
+You can also loop over a vector of strings (more on vectors next week!)
+
+```r
+x &lt;- rep('oh hai!', 3)
+x
+```
+
+```
+## [1] "oh hai!" "oh hai!" "oh hai!"
+```
+--
+
+```r
+for (i in x) {
+    cat(i, '\n')
+}
+```
+```
+oh hai! 
+oh hai! 
+oh hai! 
+```
+
 ---
 # Practice: What will this return?
 
@@ -126,9 +176,9 @@ for (i in 1:5) {
 }
 ```
 &lt;br&gt;
---
 
-```r
+--
+```
 1 
 --2 
 ----3 
@@ -139,24 +189,24 @@ for (i in 1:5) {
 ---
 # Practice: What will this return?
 
-[2 minutes](https://www.youtube.com/watch?v=48z7nQaehWI) - no typing!
+[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
 
 
 ```r
 n &lt;- 6
 for (i in seq(n)) {
-    cat('--')
+    cat('|')
     for (j in seq(1, n, 2)) {
         cat('*')
     }
-    cat('--', '\n')
+    cat('|', '\n')
 }
 ```
 
 &lt;br&gt;
---
 
-```r
+--
+```
 --***-- 
 --***-- 
 --***-- 
@@ -164,6 +214,68 @@ for (i in seq(n)) {
 --***-- 
 --***-- 
 ```
+
+---
+# Group practice: sum from `m` to `n`
+
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+
+1) `sumFromMToN(m, n)`: Write a function that sums the total of the integers between `m` and `n`. **Bonus**: You can solve this without a loop (Google it).
+
+- sumFromMToN(5, 10) == (5+6+7+8+9+10)
+- sumFromMToN(1, 1) == 1
+
+2) `sumOfOddsFromMToN(m, n)`: Write a function that sums every _odd_ integer between `m` and `n`.
+
+- sumOfOddsFromMToN(4, 10) == (5 + 7 + 9)
+- sumOfOddsFromMToN(5, 9) == (5 + 7 + 9)
+    
+3) `sumEveryKthFromMToN(m, n, k)`: Write a function to sum every kth integer between `m` and `n`.
+
+- sumEveryKthFromMToN(5, 20, 7) == (5 + 12 + 19)
+- sumEveryKthFromMToN(1, 10, 2) == (1 + 3 + 5 + 7 + 9)
+- sumEveryKthFromMToN(0, 0, 1) == 0
+
+---
+# The `while` loop
+
+&gt; A friend calls her programmer roommate and says, "while you're out, buy some milk"...her roommate never returned home.
+&gt;
+&gt; ![](images/laugh_emoji.png){ width=100 }
+
+---
+# The `while` loop
+
+--
+&lt;br&gt;
+.pull-left[
+### Basic format:
+
+```r
+while (CONDITION) {
+  STATEMENT1
+  STATEMENT2
+  ETC
+}
+```
+]
+--
+.pull-right[
+Here's the general idea:
+
+&lt;img src="images/loop_while.png" width="350"&gt;
+]
+
+---
+# `for` vs. `while`
+
+- ### Use `for` loops when there is a _known_ number of iterations. 
+- ### Use `while` loops when there is an _unknown_ number of iterations.
+
+---
+# Practice: What will this return?
+
+[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
