--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -220,7 +220,7 @@ for (i in seq(n)) {
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
-1) `sumFromMToN(m, n)`: Write a function that sums the total of the integers between `m` and `n`. **Bonus**: You can solve this without a loop (Google it).
+1) `sumFromMToN(m, n)`: Write a function that sums the total of the integers between `m` and `n`. **Bonus**: Try solving this without a loop (it's possible - Google it!).
 
 - sumFromMToN(5, 10) == (5+6+7+8+9+10)
 - sumFromMToN(1, 1) == 1
@@ -239,8 +239,10 @@ for (i in seq(n)) {
 ---
 # The `while` loop
 
-&gt; A friend calls her programmer roommate and says, "while you're out, buy some milk"...her roommate never returned home.
-&gt;
+A friend calls her programmer roommate and says, "while you're out, buy some milk"...
+
+...her roommate never returned home.
+
 &lt;img src="images/laugh_emoji.png" width="100"&gt;
 
 ---
@@ -279,6 +281,63 @@ Here's the general idea:
 # Practice: What will this return?
 
 [60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+
+.pull-left[
+
+```r
+f &lt;- function(x) {
+    n = 1
+    while (n &lt; x) {
+        cat(n, '\n')
+        n = 2*n
+    }
+}
+```
+
+```r
+f(5)
+f(10)
+f(50)
+```
+]
+
+--
+.pull-right[
+
+```r
+f(5)
+```
+
+```
+## 1 
+## 2 
+## 4
+```
+
+```r
+f(10)
+```
+
+```
+## 1 
+## 2 
+## 4 
+## 8
+```
+
+```r
+f(50)
+```
+
+```
+## 1 
+## 2 
+## 4 
+## 8 
+## 16 
+## 32
+```
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
