--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -222,19 +222,19 @@ for (i in seq(n)) {
 
 1) `sumFromMToN(m, n)`: Write a function that sums the total of the integers between `m` and `n`. **Bonus**: Try solving this without a loop (it's possible - Google it!).
 
-- sumFromMToN(5, 10) == (5+6+7+8+9+10)
-- sumFromMToN(1, 1) == 1
+- `sumFromMToN(5, 10) == (5+6+7+8+9+10)`
+- `sumFromMToN(1, 1) == 1`
 
 2) `sumOfOddsFromMToN(m, n)`: Write a function that sums every _odd_ integer between `m` and `n`.
 
-- sumOfOddsFromMToN(4, 10) == (5 + 7 + 9)
-- sumOfOddsFromMToN(5, 9) == (5 + 7 + 9)
+- `sumOfOddsFromMToN(4, 10) == (5 + 7 + 9)`
+- `sumOfOddsFromMToN(5, 9) == (5 + 7 + 9)`
     
 3) `sumEveryKthFromMToN(m, n, k)`: Write a function to sum every kth integer between `m` and `n`.
 
-- sumEveryKthFromMToN(5, 20, 7) == (5 + 12 + 19)
-- sumEveryKthFromMToN(1, 10, 2) == (1 + 3 + 5 + 7 + 9)
-- sumEveryKthFromMToN(0, 0, 1) == 0
+- `sumEveryKthFromMToN(5, 20, 7) == (5 + 12 + 19)`
+- `sumEveryKthFromMToN(1, 10, 2) == (1 + 3 + 5 + 7 + 9)`
+- `sumEveryKthFromMToN(0, 0, 1) == 0`
 
 ---
 # The `while` loop
@@ -336,6 +336,84 @@ f(50)
 ## 8 
 ## 16 
 ## 32
+```
+]
+
+---
+# Group practice
+
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+
+.pull-left[
+1) `isMultipleOf4Or7(n)`
+
+Write a function that returns `TRUE` if `n` is a multiple of 4 or 7 and `FALSE` otherwise. Here's some test cases:
+
+- `isMultipleOf4Or7(0) == FALSE`
+- `isMultipleOf4Or7(1) == FALSE`
+- `isMultipleOf4Or7(-7) == FALSE`
+- `isMultipleOf4Or7(4) == TRUE`
+- `isMultipleOf4Or7(7) == TRUE`
+- `isMultipleOf4Or7(28) == TRUE`
+- `isMultipleOf4Or7('notANumer') == FALSE`
+
+]
+
+.pull-right[
+
+2) `nthMultipleOf4Or7(n)`
+
+Write a function that returns the nth positive integer that is a multiple of either 4 or 7. Here's some test cases:
+
+- `nthMultipleOf4Or7(1) == 4`
+- `nthMultipleOf4Or7(2) == 7`
+- `nthMultipleOf4Or7(3) == 8`
+- `nthMultipleOf4Or7(4) == 12`
+- `nthMultipleOf4Or7(5) == 14`
+- `nthMultipleOf4Or7(6) == 16`
+- `nthMultipleOf4Or7(10) == 28`
+]
+
+---
+# Group practice - Prime Numbers
+
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+
+.pull-left[
+1) `isPrime(n)`
+
+Write a function that takes a non-negative integer, `n`, and returns `TRUE` if it is a prime number and `FALSE` otherwise. Here's a test function:
+
+
+```r
+testIsPrime &lt;- function() {
+    cat("Testing isPrime()...")
+    stopifnot(isPrime(1) == FALSE)
+    stopifnot(isPrime(2) == TRUE)
+    stopifnot(isPrime(7) == TRUE)
+    stopifnot(isPrime(13) == TRUE)
+    stopifnot(isPrime(14) == FALSE)
+    cat("Passed!\n")
+}
+```
+]
+
+.pull-right[
+2) `nthPrime(n)`
+
+Write a function that takes a non-negative integer, `n`, and returns the nth prime number, where `nthPrime(1)` returns the first prime number (2). Here's a test function:
+ 
+
+```r
+testNthPrime &lt;- function() {
+    cat("Testing nthPrime()...")
+    stopifnot(nthPrime(1) == 2)
+    stopifnot(nthPrime(2) == 3)
+    stopifnot(nthPrime(3) == 5)
+    stopifnot(nthPrime(4) == 7)
+    stopifnot(nthPrime(7) == 17)
+    cat("Passed!\n")
+}
 ```
 ]
     </textarea>
