--- a/classNotes/5-loops/5-loops.html
+++ b/classNotes/5-loops/5-loops.html
@@ -28,12 +28,12 @@ class: center, middle, inverse, title-slide
 # "Flow Control"
 
 ### Flow control is code that alters the otherwise linear flow of operations in a program.
- 
+
 --
 ### Last week:
 
-- `if` statements 
-- `else` statements 
+- `if` statements
+- `else` statements
 &lt;br&gt;
 
 --
@@ -42,8 +42,8 @@ class: center, middle, inverse, title-slide
 
 - `for` loops
 - `while` loops
-- `break` statements 
-- `next` statements 
+- `break` statements
+- `next` statements
 
 ---
 # The `for` loop
@@ -79,7 +79,7 @@ Here's the general idea:
 
 --
 ### 1. Use the `seq()` function
-### 2. Use the `:` operator 
+### 2. Use the `:` operator
 
 &lt;br&gt;
 
@@ -113,7 +113,7 @@ seq(1, 10, 2)
 ##  [1]  1  2  3  4  5  6  7  8  9 10
 ```
 ---
-# Sequences don't have to be integers 
+# Sequences don't have to be integers
 
 --
 
@@ -154,9 +154,9 @@ for (i in x) {
 }
 ```
 ```
-oh hai! 
-oh hai! 
-oh hai! 
+oh hai!
+oh hai!
+oh hai!
 ```
 
 ---
@@ -179,11 +179,11 @@ for (i in 1:5) {
 
 --
 ```
-1 
---2 
-----3 
---4 
-5 
+1
+--2
+----3
+--4
+5
 ```
 
 ---
@@ -207,12 +207,12 @@ for (i in seq(n)) {
 
 --
 ```
---***-- 
---***-- 
---***-- 
---***-- 
---***-- 
---***-- 
+--***--
+--***--
+--***--
+--***--
+--***--
+--***--
 ```
 
 ---
@@ -225,16 +225,132 @@ for (i in seq(n)) {
 - `sumFromMToN(5, 10) == (5+6+7+8+9+10)`
 - `sumFromMToN(1, 1) == 1`
 
-2) `sumOfOddsFromMToN(m, n)`: Write a function that sums every _odd_ integer between `m` and `n`.
+2) `sumOfOddsFromMToN(m, n)`: Write a function that sums every _odd_ integer between `m` and `n`. **Bonus**: Try solving this without a loop (Hint: use a vector operation...we'll cover this next week!).
 
 - `sumOfOddsFromMToN(4, 10) == (5 + 7 + 9)`
 - `sumOfOddsFromMToN(5, 9) == (5 + 7 + 9)`
-    
+
 3) `sumEveryKthFromMToN(m, n, k)`: Write a function to sum every kth integer between `m` and `n`.
 
 - `sumEveryKthFromMToN(5, 20, 7) == (5 + 12 + 19)`
 - `sumEveryKthFromMToN(1, 10, 2) == (1 + 3 + 5 + 7 + 9)`
 - `sumEveryKthFromMToN(0, 0, 1) == 0`
+
+---
+# 5 minute break - stand up, move around, stretch!
+
+### [5 minutes](https://www.youtube.com/watch?v=_W0bSen8Qjg)
+
+---
+# `break` and `next`
+
+### `break`
+
+--
+.pull-left[
+
+Forces a loop to stop and "break" out of the loop.
+
+
+```r
+for (val in 1:5) {
+    if (val == 3) {
+        break
+    }
+    cat(val, '\n')
+}
+```
+
+```
+1 
+2
+```
+]
+
+--
+.pull-right[
+
+In a nested loop:
+
+
+```r
+for (i in 1:3) {
+  cat('*')
+    for (j in 1:3) {
+        if (j == 3) {
+            break
+        }
+        cat(j, '\n')
+    }
+}
+```
+
+```
+*1 
+2 
+*1 
+2 
+*1 
+2
+```
+]
+
+---
+# `break` and `next`
+
+### `next`
+
+--
+.pull-left[
+
+Skips to the _next_ iteration of a loop
+
+
+```r
+for (val in 1:5) {
+    if (val == 3) {
+        next
+    }
+    cat(val, '\n')
+}
+```
+
+```
+1
+2
+4
+5
+```
+
+]
+
+--
+.pull-right[
+
+In a nested loop:
+
+
+```r
+for (i in 1:3) {
+  cat('*')
+    for (j in 1:3) {
+        if (j == 2) {
+            next
+        }
+        cat(j, '\n')
+    }
+}
+```
+
+```
+*1 
+3 
+*1 
+3 
+*1 
+3 
+```
+]
 
 ---
 # The `while` loop
@@ -271,7 +387,7 @@ Here's the general idea:
 # `for` vs. `while`
 
 .pull-left[
-### Use `for` loops when there is a _known_ number of iterations. 
+### Use `for` loops when there is a _known_ number of iterations.
 ]
 .pull-right[
 ### Use `while` loops when there is an _unknown_ number of iterations.
@@ -363,7 +479,7 @@ Write a function that returns `TRUE` if `n` is a multiple of 4 or 7 and `FALSE` 
 
 2) `nthMultipleOf4Or7(n)`
 
-Write a function that returns the nth positive integer that is a multiple of either 4 or 7. Here's some test cases:
+Write a function that returns the nth positive integer that is a multiple of either 4 or 7. Hint: use `isMultipleOf4Or7(n)` as a helper function! Here's some test cases:
 
 - `nthMultipleOf4Or7(1) == 4`
 - `nthMultipleOf4Or7(2) == 7`
@@ -382,39 +498,27 @@ Write a function that returns the nth positive integer that is a multiple of eit
 .pull-left[
 1) `isPrime(n)`
 
-Write a function that takes a non-negative integer, `n`, and returns `TRUE` if it is a prime number and `FALSE` otherwise. Here's a test function:
+Write a function that takes a non-negative integer, `n`, and returns `TRUE` if it is a prime number and `FALSE` otherwise. Here's some test cases:
 
+- `isPrime(1) == FALSE`
+- `isPrime(2) == TRUE`
+- `isPrime(7) == TRUE`
+- `isPrime(13) == TRUE`
+- `isPrime(14) == FALSE`
 
-```r
-testIsPrime &lt;- function() {
-    cat("Testing isPrime()...")
-    stopifnot(isPrime(1) == FALSE)
-    stopifnot(isPrime(2) == TRUE)
-    stopifnot(isPrime(7) == TRUE)
-    stopifnot(isPrime(13) == TRUE)
-    stopifnot(isPrime(14) == FALSE)
-    cat("Passed!\n")
-}
-```
 ]
 
 .pull-right[
 2) `nthPrime(n)`
 
-Write a function that takes a non-negative integer, `n`, and returns the nth prime number, where `nthPrime(1)` returns the first prime number (2). Here's a test function:
- 
+Write a function that takes a non-negative integer, `n`, and returns the nth prime number, where `nthPrime(1)` returns the first prime number (2). Hint: use `isPrime(n)` as a helper function! Here's some test cases:
 
-```r
-testNthPrime &lt;- function() {
-    cat("Testing nthPrime()...")
-    stopifnot(nthPrime(1) == 2)
-    stopifnot(nthPrime(2) == 3)
-    stopifnot(nthPrime(3) == 5)
-    stopifnot(nthPrime(4) == 7)
-    stopifnot(nthPrime(7) == 17)
-    cat("Passed!\n")
-}
-```
+- `nthPrime(1) == 2`
+- `nthPrime(2) == 3`
+- `nthPrime(3) == 5`
+- `nthPrime(4) == 7`
+- `nthPrime(7) == 17`
+
 ]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
